<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aizhan.product.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="300dp" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/tittle_articul">
                    </TextView>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="0.45"
                        android:text="@string/articul">
                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="@string/tittle_ostatok">
                    </TextView>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.45"
                        android:text="@string/ostatok" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/tittle_scena"
                        tools:layout_width="match_parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.45"
                        android:text="@string/scena" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/S" />

                    <Button
                        android:id="@+id/buttonM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/M" />

                    <Button
                        android:id="@+id/buttonL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/L" />

                    <Button
                        android:id="@+id/buttonXL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/XL" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonXXL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/XXL" />

                    <Button
                        android:id="@+id/buttonXXXL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/XXXL" />

                    <Button
                        android:id="@+id/buttonXXXXL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/XXXXL" />

                    <Button
                        android:id="@+id/buttonXXXXXL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/XXXXXL" />

                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgView1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imgBtn_height"
                        android:layout_weight="4"
                        android:scaleType="fitStart"/>

                    <ImageView
                        android:id="@+id/imgView2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imgBtn_height"
                        android:layout_weight="4"
                        android:scaleType="fitStart"/>

                    <ImageView
                        android:id="@+id/imgView3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imgBtn_height"
                        android:layout_weight="4"
                        android:scaleType="fitStart"/>

                    <ImageView
                        android:id="@+id/imgView4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imgBtn_height"
                        android:layout_weight="4"
                        android:scaleType="fitStart"/>
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:inputType="numberSigned" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/kolichestvo"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="В корзину">
                </Button>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
